# machine-learning-2025-2026

00-leveling/: 00_python_leveling.ipynb  01_ml_leveling.ipynb
01_beginner/: 00_Python_Basic.ipynb  02_Python_funkcje.ipynb  02_Python_funkcje_task.ipynb
02_ml_libraries_introduction/: 01_numpy.ipynb  01_numpy_task.ipynb  02_numpy.ipynb  02_pandas.ipynb  02_pandas_task.ipynb
09_milestone_tasks/: 01_Python_NumPy_Pandas.ipynb
demo/: 01a_hand_volume_control_macos.py
demo/maze-solver/: .gitignore  LICENSE  README.md  pyproject.toml
demo/maze-solver/src/maze_solver_lab/: __init__.py  __main__.py  app.py  config.py  main.py  maze.py  rendering.py
demo/maze-solver/src/maze_solver_lab/solvers/: __init__.py  astar.py  base.py  brute_force.py  evolutionary.py  q_learning.py
demo/maze-solver/tests/: test_maze.py  test_solvers.py
zadanie_zaliczeniowe/: zadanie_zaliczeniowe_uczenie_maszynowe.md
