[project]
name = "maze-solver-lab"
version = "0.1.0"
description = "Interactive maze pathfinding laboratory with brute-force search, A*, Q-learning, and evolutionary optimization."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Maze Solver Lab contributors" }
]
dependencies = [
    "numpy>=1.26",
    "pygame>=2.5",
]

[project.scripts]
maze-solver-lab = "maze_solver_lab.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
